package com.example.demo.request;

public class FavouritesRequest {
}
