package com.example.demo.request;


public class UsersRequest {

    private Long id;
    private String username;
    private String password;
    private String name;
    private String city;


    public UsersRequest() {
    }

    public UsersRequest(Long id, String username, String password, String name, String city) {
        this.id = id;
        this.username = username;
        this.password = password;
        this.name = name;
        this.city = city;
    }

    public Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public String getUsername() {
        return username;
    }

    public void setUsername(String username) {
        this.username = username;
    }

    public String getPassword() {
        return password;
    }

    public void setPassword(String password) {
        this.password = password;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getCity() {
        return city;
    }

    public void setCity(String city) {
        this.city = city;
    }
}
